--- a/simple_backup.glade
+++ b/simple_backup.glade
@@ -185,6 +185,7 @@
             <child>
               <object class="GtkButton" id="button_remove">
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="image">image_remove</property>
