--- a/simple_backup.glade
+++ b/simple_backup.glade
@@ -155,7 +155,7 @@
                 <property name="model">liststore_files_backup</property>
                 <property name="search_column">0</property>
                 <child internal-child="selection">
-                  <object class="GtkTreeSelection"/>
+                  <object class="GtkTreeSelection" id="tree_view_selector"/>
                 </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="file_column">
