--- a/simple_backup.glade
+++ b/simple_backup.glade
@@ -155,7 +155,10 @@
                 <property name="model">liststore_files_backup</property>
                 <property name="search_column">0</property>
                 <child internal-child="selection">
-                  <object class="GtkTreeSelection" id="tree_view_selector"/>
+                  <object class="GtkTreeSelection" id="tree_view_selector">
+                    <property name="mode">multiple</property>
+                    <signal name="changed" handler="on_tree_selection_changed" swapped="no"/>
+                  </object>
                 </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="file_column">
