--- a/simple_backup.glade
+++ b/simple_backup.glade
@@ -194,6 +194,9 @@
                 <child>
                   <object class="GtkTreeViewColumn" id="size_column">
                     <property name="title" translatable="yes">Size</property>
+                    <property name="clickable">True</property>
+                    <property name="sort_indicator">True</property>
+                    <property name="sort_column_id">1</property>
                     <child>
                       <object class="GtkCellRendererText"/>
                       <attributes>
