--- a/simple_backup.glade
+++ b/simple_backup.glade
@@ -155,7 +155,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="model">liststore_files_backup</property>
+                <property name="rules_hint">True</property>
                 <property name="search_column">0</property>
+                <property name="enable_grid_lines">horizontal</property>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection" id="tree_view_selector">
                     <property name="mode">multiple</property>
